test/tests/ParameterizedNonGeneric2.expected
ParameterizedNonGeneric2.frost:4:22: error: 'anonymous.ParameterizedNonGeneric2' expected 0 generic arguments, but found 1
1 error
