test/tests/ParameterizedNonGeneric2.frost
class ParameterizedNonGeneric2 {
    @class
    method main() {
        def error := ParameterizedNonGeneric2<String>()
    }
}